--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-fetch": "^3.3.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
