--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "client-sessions": "^0.8.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "mongoose": "^8.13.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
